--- a/2. CSS/Week2/CSS FlexBox/index.html
+++ b/2. CSS/Week2/CSS FlexBox/index.html
@@ -13,6 +13,11 @@
         <div>Child 3</div>
         <div>Child 4</div>
         <div>Child 5</div>
+        <div>Child 1</div>
+        <div>Child 2, more content bigger than others. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, voluptatibus quidem, aut perspiciatis nulla ut facere sunt voluptate atque illum vero quasi. Modi unde ipsam incidunt tempora perferendis soluta ut?</div>
+        <div>Child 3</div>
+        <div>Child 4</div>
+        <div>Child 5</div>
     </div>
 </body>
 </html>
