--- a/0. Pojects/Project2 Portfolio/index.html
+++ b/0. Pojects/Project2 Portfolio/index.html
@@ -12,9 +12,10 @@
             <li>Sourav Sinha</li>
             <li><a href="http://">Resume</a></li>
             <li><a href="http://">Projects</a></li>
-            <li><a href="http://">Hire Me</a></li>
+            <li class="button"><a href="http://">Hire Me</a></li>
         </ul>
     </nav>
+    <div class="gradient-section"></div>
     <section id="intro">
         <!-- <h2>Sourav Sinha</h2> -->
         <p>Hello Folks!!</p>
@@ -36,9 +37,12 @@
         </h4>
     </section>
 
+    <div class="gradient-section"></div>
+
     <section id="experience">
         
-        <div>
+        <img src="pf.jpg" alt="profile pic" class="my-picture">
+        <div id="experience-details">
             <ul>
                 <li>Software Engineer @ <a href="http://www.optum.com" target="_blank">Optum</a></li>
                 <li>Winter Intern @ <a href="http://www.highradius.com" target="_blank">HRC</a></li>
@@ -46,6 +50,7 @@
         </div>
     </section>
 
+    <div class="gradient-section"></div>
 
     <div class="section-mint-tonic">
         <section id="hire">
@@ -53,5 +58,12 @@
             <p>I am always eager to learn and get my hands dirty on some exciting projects.</p>
         </section>
     </div>
+
+    <div class="gradient-section"></div>
+
+    <footer id="footer">
+        <p>Sourav Sinha • Software Engineer</p>
+        <p><small>© All rights reserved.</small></p>
+    </footer>
 </body>
 </html>
