--- a/22. Todo Project/index.html
+++ b/22. Todo Project/index.html
@@ -15,27 +15,30 @@
         class="search-bar flex justify-center items-center mt-10 mx-auto space-x-4"
       >
         <input
-          type="text"
-          name=""
-          id=""
-          class="border-2 border-gray-300 p-2 rounded-lg flex-auto"
-          placeholder="Create new task here"
+            type="text"
+            name=""
+            id="task-input"
+            class="border-2 border-gray-300 p-2 rounded-lg flex-auto"
+            placeholder="Create new task here"
+            onchange="setNewTaskValue(event)"
         />
         <button
           type="button"
           class="border-2 border-blue-500 bg-blue-500 text-white p-2 rounded-lg hover:bg-blue-700"
+          id="add-task-btn"
+          onclick="addTasks()"
         >
           Add Task
         </button>
         <button
           type="button"
-          class="border-2 border-green-500 bg-green-500 text-white p-2 rounded-lg hover:bg-green-700"
+          class="border-2 border-green-500 bg-green-500 text-white p-2 rounded-lg hover:bg-green-700 pending-task-btn"
         >
           Pending Tasks
         </button>
       </div>
 
-      <div class="todo-data">
+      <div class="todo-data" id="todo-data" >
         <div
           class="flex justify-between items-center border-2 border-gray-300 p-2 mt-10 space-x-4 list-todo-heading"
         >
@@ -58,41 +61,9 @@
             Actions
           </div>
         </div>
-
-        <div
-          class="flex justify-between items-center border-l-2 border-r-2 border-b-2 border-gray-300 p-2 mt-0 space-x-4 list-todo-heading h-full"
-        >
-          <div
-            class="basis-1/6 text-center text-xl border-r-2 border-gray-300 todo-no"
-          >
-            1
-          </div>
-          <div
-            class="grow text-center text-xl border-r-2 border-gray-300 todo-detail"
-          >
-            Progress is good
-          </div>
-          <div
-            class="basis-1/6 text-center text-xl border-r-2 border-gray-300 todo-item"
-          >
-            In progress
-          </div>
-          <div class="basis-1/6 text-center text-xl todo-action">
-            <button
-              class="border-2 border-red-500 bg-red-500 text-white p-1 rounded-lg hover:bg-red-700"
-            >
-              Delete
-            </button>
-            <button
-              class="border-2 border-green-500 bg-green-500 text-white p-1 rounded-lg hover:bg-green-700 ml-2"
-            >
-              Finished
-            </button>
-          </div>
-        </div>
-
-        
+        <!-- action todos -->
       </div>
     </div>
+    <script src="./index.js"></script>
   </body>
 </html>
