--- a/22. Todo Project/index.html
+++ b/22. Todo Project/index.html
@@ -15,18 +15,20 @@
         class="search-bar flex justify-center items-center mt-10 mx-auto space-x-4"
       >
         <input
-            type="text"
-            name=""
-            id="task-input"
-            class="border-2 border-gray-300 p-2 rounded-lg flex-auto"
-            placeholder="Create new task here"
-            onchange="setNewTaskValue(event)"
+          type="text"
+          name=""
+          id="task-input"
+          class="border-2 border-gray-300 p-2 rounded-lg flex-auto"
+          placeholder="Create new task here"
+          oninput="setNewTaskValue(event)"
+          onkeyup="toggleAddTaskButton(event)"
         />
         <button
           type="button"
-          class="border-2 border-blue-500 bg-blue-500 text-white p-2 rounded-lg hover:bg-blue-700"
+          class="border-2 border-blue-500 bg-blue-500 text-white p-2 rounded-lg enabled:hover:bg-blue-700 disabled:opacity-50"
           id="add-task-btn"
           onclick="addTasks()"
+          disabled
         >
           Add Task
         </button>
@@ -38,7 +40,7 @@
         </button>
       </div>
 
-      <div class="todo-data" id="todo-data" >
+      <div class="todo-data" id="todo-data">
         <div
           class="flex justify-between items-center border-2 border-gray-300 p-2 mt-10 space-x-4 list-todo-heading"
         >
