added finished function

--- a/22. Todo Project/index.html
+++ b/22. Todo Project/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1 class="text-3xl font-bold text-center mt-10">ToDo List</h1>
-    <div class="todo-actions w-4/5 mx-auto">
+    <div class="todo-actions w-4/5 mx-auto" id="todo-actions">
       <!-- 1. add task , search new and view pending buttons-->
       <div
         class="search-bar flex justify-center items-center mt-10 mx-auto space-x-4"
