inital edit and pending button setup

--- a/22. Todo Project/index.html
+++ b/22. Todo Project/index.html
@@ -35,6 +35,7 @@
         <button
           type="button"
           class="border-2 border-green-500 bg-green-500 text-white p-2 rounded-lg hover:bg-green-700 pending-task-btn"
+          onclick="handlePendingTasks(event)"
         >
           Pending Tasks
         </button>
