--- a/23. Ping Pong Game/index.html
+++ b/23. Ping Pong Game/index.html
@@ -10,8 +10,9 @@
     <h1>Welcome to Ping Pong Game</h1>
 
     <div class="playground" id="playground">
-        <div class="paddle"></div>
-        <div class="ball"></div>
+        <div class="paddle" id="paddle"></div>
+        <div class="ball" id="ball"></div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
