--- a/25. Advanced Dom/Tic-Tac-Toe/index.html
+++ b/25. Advanced Dom/Tic-Tac-Toe/index.html
@@ -8,16 +8,17 @@
 </head>
 <body>
   <div class="outer game-arena" id="outer">
-    <div class="box" id="box1"></div>
-    <div class="box" id="box2"></div>
-    <div class="box" id="box3"></div>
-    <div class="box" id="box4"></div>
-    <div class="box" id="box5"></div>
-    <div class="box" id="box6"></div>
-    <div class="box" id="box7"></div>
-    <div class="box" id="box8"></div>
-    <div class="box" id="box9"></div>
+    <div class="box" id="box1" data-cell="0"></div>
+    <div class="box" id="box2" data-cell="1"></div>
+    <div class="box" id="box3" data-cell="2"></div>
+    <div class="box" id="box4" data-cell="3"></div>
+    <div class="box" id="box5" data-cell="4"></div>
+    <div class="box" id="box6" data-cell="5"></div>
+    <div class="box" id="box7" data-cell="6"></div>
+    <div class="box" id="box8" data-cell="7"></div>
+    <div class="box" id="box9" data-cell="8"></div>
   </div>
-  <script src="index.js"></script>
+  <!-- <script src="index.js"></script> -->
+  <script src="algo_camp_script.js"></script>
 </body>
 </html>
